objects/ARCB1__c.object
<CustomObject>
    <fields>
        <fullName>ARCB1Desc__c</fullName>
        <label>ARCB1Desc</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ARpickObjGLPFiled2__c</fullName>
        <globalPicklist>ARGlobalPicklist22</globalPicklist>
        <label>ARpickObjGLPFiled2</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TestPicklistFiled__c</fullName>
        <label>TestPicklistFiled</label>
        <picklist>
            <picklistValues>
                <fullName>aa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>bb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>dd</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>ARCB1</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ARCB1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ARCB1s</pluralLabel>
    <recordTypes>
        <fullName>ARCB1R1</fullName>
        <active>true</active>
        <label>ARCB1R1</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>